# Trade-Finance-Document-Extraction-With-Bedrock-Document-Automation

./: .env.example  .gitignore  Dockerfile  FEATURES.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
scripts/: seed_admin.py
src/app/: errors.py  logging.py  main.py  settings.py
src/app/bda/: client.py  invoke.py  parse.py  poll.py
src/app/db/: engine.py  migrations.py  models.py
src/app/middleware/: error_handler.py  log_context.py  request_id.py  security_headers.py
src/app/repos/: api_keys.py  audit.py  jobs.py  users.py
src/app/routes/: admin.py  auth.py  health.py  jobs.py  me.py  usage.py
src/app/schemas/: admin.py  auth.py  common.py  jobs.py  users.py
src/app/services/: apikeys.py  audit.py  billing.py  csrf.py  jobs_runner.py  passwords.py  (+3 more)
static/: index.html  login.html
static/admin/: audit.html  index.html  job.html  jobs.html  user.html  users.html
static/customer/: index.html  job.html
static/js/: api.js  audit.js  auth.js  dashboard.js  filters.js  format.js  job-detail.js  job-list.js  pagination.js  toast.js  upload.js  users-admin.js
tests/: conftest.py
tests/_fakes/: bda.py
tests/e2e/: test_smoke.py
tests/integration/: test_admin.py  test_apikey_routes.py  test_auth_flow.py  test_health.py  test_jobs_lifecycle.py  test_jobs_skeleton.py  test_rate_limit.py
tests/unit/: test_apikeys.py  test_bda_parse.py  test_billing.py  test_errors.py  test_logging.py  test_models.py  test_passwords.py  test_sessions.py  test_settings.py  test_uploads.py
(+3 files in other folders)
