[project]
name = "document-automation"
version = "0.1.0"
description = "AWS Bedrock Data Automation logistics IDP demo"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "aioboto3>=13.2",
    "structlog>=24.4",
    "python-json-logger>=2.0",
    "argon2-cffi>=23.1",
    "cryptography>=43",
    "limits[async-redis]>=3.13",
    "tenacity>=9.0",
    "anyio>=4.6",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "email-validator>=2.0",
    "celery>=5.4",
    "kombu>=5.6.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "moto[s3]>=5.0",
    "fakeredis>=2.26",
    "ruff>=0.8",
    "mypy>=1.13",
    "playwright>=1.58.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
